@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: socket.test,v 1.18 2001/09/14 00:43:21 hobbs Exp $
+# RCS: @(#) $Id: socket.test,v 1.19 2001/09/20 12:08:37 dkf Exp $
 
 # Running socket tests with a remote server:
 # ------------------------------------------
@@ -123,7 +123,10 @@ if {$doTestsWithRemoteServer} {
 	    set doTestsWithRemoteServer 0
 	} else {
 	    set remoteServerIP 127.0.0.1
-	    set remoteFile [file join [pwd] remote.tcl]
+	    # Be *extra* careful in case this file is sourced from
+	    # a directory other than the current one...
+	    set remoteFile [file join [pwd] [file dirname [info script]] \
+		    remote.tcl]
 	    if {[catch {set remoteProcChan \
 				[open "|[list $::tcltest::tcltest $remoteFile \
 					-serverIsSilent \
