@@ -1,3 +1,9 @@
+2001-09-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* tests/socket.test: removed dependence on being run from same dir
+	as remote.tcl, which only now needs to be in the same dir as this
+	file.  [Bug #219326]
+
 2001-09-19  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tests/winPipe.test: removed obsolete cat16 tests
